// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Showcases /> Should render correctly 1`] = `
<div>
  <div
    class="css-ycbew2-Container emip5oh6"
    id="exampleGetApi"
  >
    <button
      class="css-cms8ac-ButonGetApi emip5oh5"
    />
  </div>
</div>
`;

exports[`<Showcases /> When props.loading is true must render component <Spiner /> 1`] = `
<div>
  <div
    class="css-ycbew2-Container emip5oh6"
    id="exampleGetApi"
  >
    <button
      class="css-cms8ac-ButonGetApi emip5oh5"
    />
    <div
      class="css-d9vn3c-SpinnerRoot er3vut40"
    />
  </div>
</div>
`;
